--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </section>
       <section class="right">
         <p class="message">Start guessing...</p>
-        <p class="label-score">Lives: <span class="score">❤️❤️❤️❤️❤️</span></p>
+        <p class="label-score">❤️ Lives: <span class="score">❤️❤️❤️❤️❤️</span></p>
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
